Bug 1508693 - Add middleman call support for functions used in rendering widgets, r=lsmyth.